# tado_hijack

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .releaserc  .yamllint  CHANGELOG.md  README.md  hacs.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yaml  lint.yml  lock.yaml  semantic_release.yml  stale.yaml  validate.yml
custom_components/tado_hijack/: __init__.py  button.py  climate.py  climate_entity.py  config_flow.py  const.py  coordinator.py  definitions.py  diagnostics.py  entity.py  manifest.json  models.py  number.py  select.py  sensor.py  services.py  services.yaml  switch.py  water_heater.py
custom_components/tado_hijack/dummy/: dummy_handler.py
custom_components/tado_hijack/helpers/: action_provider_base.py  api_manager.py  client.py  climate_physics.py  command_merger.py  data_manager.py  device_linker.py  discovery.py  entity_registry_utils.py  entity_resolver.py  entity_setup.py  event_handlers.py  executor_base.py  executor_unified.py  logging_utils.py  migration.py  models_unified.py  optimistic_manager.py  overlay_builder.py  overlay_validator.py  parsers.py  poll_scheduler.py  quota_math.py  redundancy_checker.py  reset_window_tracker.py  state_patcher.py  storage.py  tado_request_handler.py  zone_utils.py
custom_components/tado_hijack/helpers/tadov3/: __init__.py  action_provider.py  executor.py  mapper.py  parsers.py
custom_components/tado_hijack/helpers/tadox/: __init__.py  action_provider.py  const.py  discovery.py  executor.py  mapper.py  parsers.py
custom_components/tado_hijack/lib/: __init__.py  patches.py  tadox_api.py  tadox_models.py
custom_components/tado_hijack/translations/: cs.json  de.json  en.json
docs/: ARCHITECTURE.md  COMPATIBILITY.md  DESIGN.md  FEATURES.md
scripts/: local_hacs_validate.py
