[tool.mypy]
platform = "linux"
python_version = "3.13"
follow_imports = "normal"
ignore_missing_imports = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
exclude = ["testing_config/"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN101",  # Self... explanatory
  "ANN102",  # cls... just as useless
  "ANN401",  # Opinioated warning on disallowing dynamically typed expressions
  "D203",    # Conflicts with other rules
  "ARG002",  # Conflicts with other rules
  "D213",    # Conflicts with other rules
  "D417",    # False positives in some occasions
  "PLR2004", # Just annoying, not really useful
  "SLOT000", # Has a bug with enums
  "TRY003",  # Avoid specifying long messages outside the exception class
  "EM101",   # Exception must not use a string literal
  "EM102",   # Exception must not use an f-string literal
  "PLR0913", # Too many arguments
  "N815",    # Scope should not be mixedCase
  "PLR0912", # Too many branches
  "PLR0915", # Too many statements
  "C901",    # Too complex
  "COM812",  # Conflicts with formatter
  "ISC001",  # Conflicts with formatter
]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.isort]
known-first-party = ["custom_components.tado_hijack"]

# --- Poetry Configuration ---
[tool.poetry]
name = "tado_hijack"
version = "1.0.0"
description = "Tado Hijack: Exposing hidden API features like battery health, presence logic, and HVAC Auto to Home Assistant while strictly saving your 100-call daily limit."
authors = ["@banter240"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
homeassistant = ">=2024.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
pytest-homeassistant-custom-component = "^0.13"

# Recommended development tools:
ruff = "^0.4.0"
mypy = "^1.9.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
